--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "lineicons": "^1.3.2",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
