--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "json5": "^2.2.3",
     "lineicons": "^1.3.2",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
